2010-05-28  Frank Warmerdam  <warmerdam@pobox.com>

	* bin/Makefile.am: add getopt.c to distribution.

	* Makefile.am: ensure geo_config.h.vc is distributed.

2010-05-09  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_new.c: Avoid memory overrun if more than MAX_VALUES geokeys 
	are encountered (#27).

	* configure.ac: fix --with-libz and --with-zlib aliases (#23)

2010-02-12  Frank Warmerdam  <warmerdam@pobox.com>

	* csv/stateplane.csv: Fix califoria VII and added Kentuky Single Zone.
	http://trac.osgeo.org/gdal/ticket/3408

2010-01-12  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 1.3.0 release.

	* csv/*.c, cpl_csv_incode.c, geo_incode_defs.h, Makefile.am: rename 
	defs.h to geo_incode_defs.h and include it in distribution so incode
	table support will work out of the box.

2010-01-07  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_names.c: ensure that VerticalUnitsGeoKey works properly.

	* geo_write.c: switch SortKeys() to a simple bubble sort so we don't
	end up crashing when rewriting screwn geotiff tag sets with 
	duplicate geokeys (like some LAS files with multiple zero dummy tags)

	* geo_new.c: resize short and double arrays bigger when reading
	from an existing file to ensure we can update and add keys later.

2010-01-03  Frank Warmerdam  <warmerdam@pobox.com>

	* Makefile.am: set versioninfo to 2:0:0 as required by the change for
	1.3.0 in the ABI due to change of size of GTIFDefn structure. 
	(#19, GDAL #3309)

2009-12-30  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_new.c: fix computation of ascii key length introduced in past
	fix a few months ago that was breaking the GTIFImport() logic.  (#14)

2009-11-11  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Recognise 9841 and 1024 projection methods as 
	CT_Mercator: http://trac.osgeo.org/gdal/ticket/3217

2009-10-19  Frank Warmerdam  <warmerdam@pobox.com>

	* csv/{gcs,pcs}.override.csv: Add comments on where the master lives
	and incorporate COORD_SYS_CODE and Pulkovo 1942 GCS.
